Refactor move code